<resources>
    <string name="app_name">JournalApp</string>
    <string name="app_title">Journal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_date">Monday 12, June</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">save</string>
    <string name="action_new">New Writeup</string>
    <string name="action_accept">Yes</string>
    <string name="action_cancel">No</string>
    <string name="title_action_delete">Delete</string>
    <string name="message_warning_delete">Are you sure you want to delete this Writeup, this action cannot be reversed.</string>
    <string name="title_sign_out">Sign out</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="title_sign_in">Sign in</string>
    <string name="content_description_header_nav">Header nav background</string>
    <string name="hint_writeup_edit">Write something about your day &#8230;</string>
</resources>
