<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimary"
                    app:title="@string/app_title"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <EditText
            android:hint="@string/hint_writeup_edit"
            android:id="@+id/tvWriteupText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/content_padding"
            android:background="@null"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            tools:text="@string/lorem_ipsum"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:scrollHorizontally="false" />

</LinearLayout>