<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/newWriteup"
        android:title="@string/action_new"
        android:icon="@drawable/ic_add_24dp"
        app:showAsAction="ifRoom"/>
</menu>